content/en/platform/corda/4.12/enterprise/cordapps/thread-pools.md
---
date: '2025-04-20'
menu:
  corda-enterprise-4-12:
    identifier: corda-enterprise-4-12-cordapps-flows-segthreadpools
    parent: corda-enterprise-4-12-cordapps-flows
tags:
- api
- service
- classes
title: Using thread pools
weight: 1
---

Corda executes flows in *thread pools*. A thread pool is a group of pre-created, idle threads, ready to execute tasks. The default Corda configuration creates a single thread pool, whose size is configured by the *[flowThreadPoolSize]({{< relref "../node/setup/corda-configuration-fields.html#enterpriseconfiguration" >}})* parameter.

From Corda 4.13 onward, the Enterprise version enables operators to define *multiple* thread pools and assign flows to them. The reason for this is to enable operators to prioritize particular flows and to segregate them from other flows.

For example, if there are slow-running reporting flows and more important transactional flows on the same system, the reporting flows can be separated into a dedicated thread pool so that they do not block the transactional flows.

## Configuring thread pools

Thread pools are defined in the [node configuration]({{< relref "../node/setup/corda-configuration-file.md" >}}) using `additionalFlowThreadPools`. The following example defines two thread pools, `pool1` and `pool2`, each with three available threads:

```json
enterpriseConfiguration {
  tuning {
    additionalFlowThreadPools= [
      {
        threadPool=pool1,
        size=3
      },
      {
        threadPool=pool2,
        size=3
      },
    ]
  }
}
```

**(TODO: Related configuration sections need to be adjusted accordingly.)**

As in previous versions of Corda, the size of the default pool (name: "default") is still specified by the *[flowThreadPoolSize]({{< relref "../node/setup/corda-configuration-fields.html#enterpriseconfiguration" >}})* parameter. 


The Corda node's [startup log]({{< relref "../node/operating/monitoring-and-logging/overview.md" >}}) outputs the defined thread pools and their sizes; for example:

```
Created flow thread pools: pool1(3), pool2(3), default(20)
```

## Default flow-to-thread pool mapping rules

How flows are mapped to thread pools depends on:

- The thread flow configuration
- Whether or not the CorDapps installed have customized thread pool rules

The Corda default FlowSchedulerMapper follows these rules, in order of highest priority first:

1. If a flow is annotated with `@FlowThreadPool("threadpoolname")` and the referenced thread pool is defined in the configuration, then that flow is executed in the specified pool. 
   
   If the specified thread pool is not present in the node configuration, then the default pool is used instead.

2. If a thread pool named `Peer-Origin` is defined, then all flows started via a peer Corda node and **not** annotated with a specific thread pool will be executed in that thread pool. Otherwise, such flows are executed in the default thread pool.

3. If a thread pool named `RPC-Origin` is defined, then all flows started via RPC (for example, by a client application) and **not** annotated with a specific thread pool will be executed in that thread pool. Otherwise, such flows are executed in the default thread pool.

4. If none of the above rules apply to a flow, then the default behavior is the same as in previous versions of Corda: the flow is executed in the default thread pool.


## Customizing flow-to-thread pool mapping rules

CorDapps can override the above default flow mapping logic by defining a class which implements [the FlowSchedulerMapper interface](https://github.com/corda/corda/blob/feature/segregated-threadpools/core/src/main/kotlin/net/corda/core/flows/scheduler/mapper/FlowSchedulerMapper.kt); for example:

```java
interface FlowSchedulerMapper {
    fun getScheduler(
            invocationContext: InvocationContext,
            flowLogic: Class<out FlowLogic<*>>,
            ourIdentity: CordaX500Name
    ): String
}
```

The default mapping logic is available [here](https://github.com/corda/corda/blob/feature/segregated-threadpools/core/src/main/kotlin/net/corda/core/flows/scheduler/mapper/FlowSchedulerMapperImpl.kt).

**(TODO: Adjust above links later to point to the release branch.)**

Corda scans CorDapps at startup time for classes implementing the FlowSchedulerMapper interface.
Corda logs this message if it finds a single candidate:

```
Using custom flow scheduler mapper. Class {classname}
```

If it has a constructor which accepts a set of Strings, it will use that class as a flow mapper.
Corda aborts with an exception if there is more than one class or there are no matching constructors.

FlowSchedulerMapper constructors get the set of available additional thread pool names as an argument.
Its `getScheduler` method is called when a flow is scheduled.
Its expected return value is the thread pool's name, which is where the flow should be executed.

Users should package their custom scheduler mapper in a separate CorDapp. This simplifies adding or removing it from the system.
Also, having the mapper in the same package as the main app would make installing multiple apps impossible due to multiple custom scheduler mappers.

## Thread pool metrics

The following [metric]({{< relref "../node/operating/monitoring-and-logging/node-metrics.md" >}}) was introduced in 4.13 specifically for thread pools:

| Name                     | Description                         |
|--------------------------|-------------------------------------|
| QueueSizeTotal           | The sum of all thread pool queues   |

The following metrics are now divided by thread pool:

| Previously                                 | Corda 4.13 onward                                             |
|--------------------------------------------|---------------------------------------------------------------|
| ActiveThread                               | ActiveThread.{threadpoolname}                                 | 
| QueueSize                                  | QueueSize.{threadpoolname}                                    | 
| QueueSizeOnInsert                          | QueueSizeOnInsert.{threadpoolname}                            |
| StartupQueueTime                           | StartupQueueTime.{threadpoolname}                             |
| FlowDuration.{Success/Failure}.{FlowClass} | FlowDuration.{Success/Failure}.{FlowClass}.{threadpoolname>}  |

Metrics related to the default pool do not have a *.default* suffix; this is for backward compatibility.


